infra/k8s/tms.db.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mysql-pod
  labels:
    app: mysql
spec:
  containers:
  - name: mysql
    image: mysql:8
    ports:
      - containerPort: 3306
    volumeMounts:
      - name: mysql-init-scripts
        mountPath: /docker-entrypoint-initdb.d
  volumes:
    - name: mysql-init-scripts
      configMap:
        name: mysql-init-scripts
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-tms-srv
spec:
  selector:
    app: mysql
  ports:
    - name: mysql-tms-srv
      protocol: TCP
      port: 5432
      targetPort: 5432
